Change Sample Namespace

--- a/AnyCAD.Basic/AnyCAD.Basic.csproj
+++ b/AnyCAD.Basic/AnyCAD.Basic.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{89766480-D042-4E86-B67B-5BB22C6B8F21}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnyCAD.Basic</RootNamespace>
+    <RootNamespace>AnySample.Basic</RootNamespace>
     <AssemblyName>AnyCAD.Basic</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -111,6 +111,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
